documentation/0.8/_sources/components/wait_for_condition.rst.txt
..
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
   WARNING:  This is a generated file.  Do not edit it manually!
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

.. index::
   single: Wait for Condition
   single: Actions; Wait for Condition

.. _Wait for Condition:

Wait for Condition
==================


Description
-----------
Wait until a condition becomes true or a timeout occurs.  If the wait times out before the condition becomes true, issue an error message and (optionally) stop the experiment.



Signature
---------
``action/wait_for_condition``


Required Parameters
-------------------

condition
^^^^^^^^^

Condition expression

timeout
^^^^^^^

Timeout duration (microseconds)



Optional Parameters
-------------------

timeout_message
^^^^^^^^^^^^^^^

Error message to report if the wait times out.  If omitted, a default message is used.


stop_on_timeout
^^^^^^^^^^^^^^^
:Default: ``YES``

If true, stop the experiment if the wait times out

